Fix ipw_start(), where logic was reverted in r287197.

PR:		232554
Submitted by:	gl00my@mail.ru


git-svn-id: svn+ssh://svn.freebsd.org/base/head@339643 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f